small improvements - removed task title expansion on long titles / hovering on completed tasks section title makes it change its color / minor improvement in box-shadows on light mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -221,8 +221,8 @@ body[data-mood]::after {
 }
 
 ::selection {
-  background-color: var(--color-text-secondary);
-  color: var(--color-bg);
+  background-color: #555fbb;
+  color: #fff;
 }
 
 p {
